@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-24T08:29:18Z",
-  "count" : 3,
-  "count_minmax" : [ 3, 4 ],
-  "count_decinc" : [ -1, +0 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +0 ]
+  "timestamp" : "2022-05-24T16:35:00Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 4 ],
+  "count_decinc" : [ -3, +0 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +0 ]
 }
