@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-05-24T08:29:18Z",
+  "timestamp" : "2022-05-24T16:35:00Z",
   "count_outdated" : 476,
   "uniques_outdated" : 267,
-  "count" : 503,
-  "uniques" : 284,
+  "count" : 501,
+  "uniques" : 283,
   "clones" : [
     {
       "timestamp": "2022-05-10T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 4 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ]
     },
     {
       "timestamp": "2022-05-11T00:00:00Z",
