@@ -1,11 +1,11 @@
 {
-  "count": 27,
-  "uniques": 6,
+  "count": 25,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-05-10T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-05-11T00:00:00Z",
