@@ -1,3 +1,10 @@
+2022-05-24T16:35:00Z:
+* notice: last 14d: unq all: 5 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 267 476 / 284 503
+* notice: next accum: outdated-unq outdated-all / unq all: 267 476 / 283 501
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -2 / +0 +0 -1 -3 / 1 1
+* notice: changed dates: [2022-05-10]
+
 2022-05-24T08:29:18Z:
 * notice: last 14d: unq all: 6 27
 * notice: prev accum: outdated-unq outdated-all / unq all: 267 476 / 284 504
